# otus_prof_map_reduce

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: mapper.cpp  reducer.cpp
test/: tests.cpp
